syntax = "proto3";

package architect;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    package_name: "com.archerimpact.architect.ontology"
    flat_package: true
};

message recruitingAgency {
    string notes = 1;
    string governmentIDNumber = 2;
    string faxNumber = 3;
    string locationOfOrigin = 4;
    string locationOfOperation = 5;
    string numberOfWorkersSentAbroad = 6;
    string directorNames = 7;
    string recruitmentSector = 8;
    string yearsInOperation = 9;
    string accusedOf = 10;
    string webSources = 11;
    string archiveSources = 12;
    string agencyAddress = 13;
    string name = 14;
}